--- a/GeekHunterApp.xaml
+++ b/GeekHunterApp.xaml
@@ -6,26 +6,25 @@
     xmlns:System="clr-namespace:System;assembly=Mscorlib"
     >
     <Application.Resources>
-      <src:DateConverter x:Key="dateConverter"/>
-      
-      <Style x:Key="titleStyle" TargetType="TextBlock">
+      <src:DateConverter x:Key="DateConverter"/>
+        <Style x:Key="TitleStyle" TargetType="TextBlock">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Foreground" Value="DodgerBlue"/>
         <Setter Property="FontSize" Value="18"/>
       </Style>
 
-      <Style x:Key="smallTitleStyle" TargetType="TextBlock">
+      <Style x:Key="SmallTitleStyle" TargetType="TextBlock">
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Foreground" Value="DimGray"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
       </Style>
 
-      <Style x:Key="textStyleTextBlock" TargetType="TextBlock">
+      <Style x:Key="TextStyleTextBlock" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#333333" />
       </Style>
 
-      <Style x:Key="textStyleTextBox" TargetType="TextBox">
+      <Style x:Key="TextStyleTextBox" TargetType="TextBox">
         <Setter Property="Foreground" Value="#333333" />
         <Setter Property="MaxLength" Value="40" />
         <Setter Property="Width" Value="392" />
