--- a/view/AddCandidateWindow.xaml
+++ b/view/AddCandidateWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="GeekHunterProject.AddCandidateWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:src="clr-namespace:GeekHunterProject" 
     Title="Add Candidate"
     SizeToContent="WidthAndHeight"
     ResizeMode="NoResize"
@@ -17,16 +16,22 @@
         </ControlTemplate>
     </Window.Resources>
 
-    <Border Padding="20">
-        <Grid>
+    <Border Padding="20" Height="347" Width="532">
+        <Grid Margin="0,-10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="41*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="43*"/>
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Border BorderThickness="0,0,0,2" BorderBrush="Black" Padding="5" Grid.Row="0">
-                <Grid>
+            <Border BorderThickness="0,0,0,2" BorderBrush="Black" Padding="5" Grid.Row="0" Margin="0,51,0,0" Grid.ColumnSpan="3">
+                <Grid Margin="0,-54,0,0">
                     <Grid.RowDefinitions>
+                        <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
                         <RowDefinition />
@@ -37,23 +42,24 @@
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="106"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="57*"/>
+                        <ColumnDefinition Width="143*"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-                               Style="{StaticResource titleStyle}"
+                    <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3"
+                               Style="{StaticResource TitleStyle}"
                                Margin="5">Candidate details:</TextBlock>
 
                     <TextBlock Grid.Row="1" Grid.Column="0"
-                               Style="{StaticResource smallTitleStyle}" Margin="0,5,0,5">First Name:</TextBlock>
+                               Style="{StaticResource SmallTitleStyle}" Margin="0,9,113,9" Grid.ColumnSpan="2">First Name:</TextBlock>
                     <TextBox Name="FirstNameEntryForm" Grid.Row="1" Grid.Column="1" 
                         Text="{Binding Path=FirstName}"
-                        Style="{StaticResource textStyleTextBox}" Margin="8,5,0,5"/>
+                        Style="{StaticResource TextStyleTextBox}" Margin="8,5,0,5" Grid.ColumnSpan="2"/>
 
-                    <TextBlock Grid.Row="2" Grid.Column="0" Style="{StaticResource smallTitleStyle}" Margin="0,5,0,5">Last Name:</TextBlock>
+                    <TextBlock Grid.Row="2" Grid.Column="0" Style="{StaticResource SmallTitleStyle}" Margin="0,9">Last Name:</TextBlock>
 
                     <TextBox Name="LastNameEntryForm" Grid.Row="2" Grid.Column="1"
-			    	  Style="{StaticResource textStyleTextBox}" Margin="8,5,0,5">
+			    	  Style="{StaticResource TextStyleTextBox}" Margin="8,5,0,5" Grid.ColumnSpan="2">
                         <TextBox.Text>
                             <Binding Path="LastName">
                                 <Binding.ValidationRules>
@@ -63,22 +69,38 @@
                         </TextBox.Text>
                     </TextBox>
 
-                    <TextBlock Grid.Row="3" Grid.Column="0" Style="{StaticResource smallTitleStyle}" Margin="0,5,0,5">Entered Date:</TextBlock>
+                    <TextBlock Grid.Row="3" Grid.Column="0" Style="{StaticResource SmallTitleStyle}" Margin="0,9">Entered Date:</TextBlock>
 
                     <TextBox Name="EnteredDateEntryForm" Grid.Row="3" Grid.Column="1" 
                         Validation.ErrorTemplate="{StaticResource validationTemplate}" 
-                        Style="{StaticResource textStyleTextBox}" Margin="8,5,0,5">
+                        Style="{StaticResource TextStyleTextBox}" Margin="8,5,0,5" Grid.ColumnSpan="2">
                         <TextBox.Text>
                             <Binding Path="EnteredDate"  
-                                Converter="{StaticResource dateConverter}" >
-                            </Binding>
+                                Converter="{StaticResource DateConverter}" />
                         </TextBox.Text>
                     </TextBox>
 
-                    <Button Name="Submit" Grid.Row="6" Grid.Column="1" HorizontalAlignment="Right" Content="Submit" Margin="0,5,5,5" Click="SubmitCandidate" Width="83"/>
+                    <Button Name="Submit" Grid.Row="7" Grid.Column="2" HorizontalAlignment="Right" Content="Submit" Margin="0,11,5,0" Click="SubmitCandidate" Width="83"/>
+                    <DataGrid x:Name="CandidateSkillGrid" Grid.ColumnSpan="2" HorizontalAlignment="Left" Height="120" Margin="10,1,0,0" Grid.Row="4" Grid.RowSpan="4" VerticalAlignment="Top" Width="203" AutoGenerateColumns="False" IsReadOnly="True" IsManipulationEnabled="False" EnableRowVirtualization="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding Id}" Header ="ID" Width="40"/>
+                            <DataGridTextColumn Binding="{Binding Name}" Header ="Skill Name" Width="150"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                    <DataGrid x:Name="AllSkillGrid"  Grid.Column="2" HorizontalAlignment="Left" Height="120" Margin="53,1,0,0" Grid.Row="4" Grid.RowSpan="4" VerticalAlignment="Top" Width="206" AutoGenerateColumns="False" IsReadOnly="True" IsManipulationEnabled="False" EnableRowVirtualization="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding Id}" Header ="ID" Width="40"/>
+                            <DataGridTextColumn Binding="{Binding Name}" Header ="Skill Name" Width="150"/>
+                        </DataGrid.Columns>
+                    </DataGrid>
+
+                    <Button x:Name="ButtonAddSkill" Content="&lt;&lt;" Grid.Column="2" HorizontalAlignment="Left" Margin="10,22,0,26" Grid.Row="4" Width="29" Grid.RowSpan="2" Click="ButtonAddSkill_Click" FontWeight="Bold"/>
+                    <Button x:Name="ButtonDeleteSkill" Content="&gt;&gt;" Grid.Column="2" HorizontalAlignment="Left" Margin="10,23,0,19" Grid.Row="5" Grid.RowSpan="2" Width="29" Click="ButtonDeleteSkill_Click" FontWeight="Bold"/>
                 </Grid>
             </Border>
 
         </Grid>
     </Border>
 </Window>
+
